spinal_cord/tests/trybuild/digestive_settings_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/trybuild/digestive_settings_wrong_type.rs:8:49
  |
8 |     let _cfg = DigestiveSettings { schema_path: 123 };
  |                                                 ^^^ expected `PathBuf`, found integer
